<resources>
    <string name="app_name">SharedPreferences</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="valorEntero">Valor Entero Almacenado: %1$d</string>
    <string name="numero_entero">Ingresa un Número Entero</string>
    <string name="ingresa_un_texto">Ingresa un Texto</string>
    <string name="texto_almacenado">Texto Almacenado: %1$s</string>
    <string name="numero_decimal">Ingresa un Número Decimal</string>
    <string name="valor_decimal_almacenado">Valor Decimal Almacenado: %1$d</string>
    <string name="btn_borrar">BORRAR</string>
    <string name="btn_guardar">GUARDAR</string>
</resources>